y.output
Terminals unused in grammar

    T_NEQ
    T_List


State 76 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 97 conflicts: 5 reduce/reduce
State 98 conflicts: 5 reduce/reduce
State 121 conflicts: 2 shift/reduce


Grammar

    0 $accept: StartDebugger $end

    1 $@1: ε

    2 StartDebugger: $@1 StartParse T_EndOfFile

    3 constant: T_Number
    4         | T_String

    5 term: T_ID
    6     | constant
    7     | list_index

    8 list_index: T_ID T_OB constant T_CB
    9           | T_ID T_OB term T_CB

   10 StartParse: T_NL StartParse

   11 $@2: ε

   12 StartParse: finalStatements T_NL $@2 StartParse
   13           | finalStatements T_NL

   14 basic_stmt: pass_stmt
   15           | break_stmt
   16           | import_stmt
   17           | assign_stmt
   18           | arith_exp
   19           | bool_exp
   20           | print_stmt
   21           | return_stmt

   22 arith_exp: term
   23          | arith_exp T_PL arith_exp
   24          | arith_exp T_MN arith_exp
   25          | arith_exp T_ML arith_exp
   26          | arith_exp T_DV arith_exp
   27          | T_MN arith_exp
   28          | T_OP arith_exp T_CP

   29 bool_exp: bool_term T_Or bool_term
   30         | arith_exp T_LT arith_exp
   31         | bool_term T_And bool_term
   32         | arith_exp T_GT arith_exp
   33         | arith_exp T_ELT arith_exp
   34         | arith_exp T_EGT arith_exp
   35         | arith_exp T_In T_ID
   36         | bool_term

   37 bool_term: bool_factor
   38          | arith_exp T_EQ arith_exp
   39          | arith_exp T_ELT arith_exp
   40          | arith_exp T_EGT arith_exp
   41          | T_True
   42          | T_False

   43 bool_factor: T_Not bool_factor
   44            | T_OP bool_exp T_CP

   45 import_stmt: T_Import T_ID

   46 pass_stmt: T_Pass

   47 break_stmt: T_Break

   48 return_stmt: T_Return

   49 assign_stmt: T_ID T_EQL arith_exp
   50            | T_ID T_EQL bool_exp
   51            | T_ID T_EQL func_call
   52            | T_ID T_EQL T_OB call_args T_CB
   53            | T_ID T_EQL T_OB T_CB
   54            | T_ID T_OB term T_CB T_EQL term

   55 print_stmt: T_Print T_OP term T_CP

   56 finalStatements: basic_stmt
   57                | cmpd_stmt
   58                | func_def
   59                | func_call
   60                | error T_NL

   61 cmpd_stmt: if_stmt
   62          | while_stmt

   63 if_stmt: T_If bool_exp T_Cln start_suite
   64        | T_If bool_exp T_Cln start_suite elif_stmts

   65 elif_stmts: else_stmt
   66           | T_Elif bool_exp T_Cln start_suite elif_stmts

   67 else_stmt: T_Else T_Cln start_suite

   68 while_stmt: T_While bool_exp T_Cln start_suite

   69 start_suite: basic_stmt

   70 $@3: ε

   71 start_suite: T_NL ID $@3 finalStatements suite

   72 suite: T_NL ND finalStatements suite
   73      | T_NL end_suite

   74 $@4: ε

   75 end_suite: DD $@4 finalStatements

   76 $@5: ε

   77 end_suite: DD $@5
   78          | ε

   79 $@6: ε

   80 args: T_ID $@6 args_list
   81     | ε

   82 $@7: ε

   83 args_list: T_Comma T_ID $@7 args_list
   84          | ε

   85 $@8: ε

   86 call_list: T_Comma term $@8 call_list
   87          | ε

   88 $@9: ε

   89 call_args: T_ID $@9 call_list

   90 $@10: ε

   91 call_args: T_Number $@10 call_list

   92 $@11: ε

   93 call_args: T_String $@11 call_list
   94          | ε

   95 $@12: ε

   96 func_def: T_Def T_ID $@12 T_OP args T_CP T_Cln start_suite

   97 func_call: T_ID T_OP call_args T_CP


Terminals, with rules where they appear

    $end (0) 0
    error (256) 60
    T_EndOfFile (258) 2
    T_Return (259) 48
    T_Number (260) 3 91
    T_True (261) 41
    T_False (262) 42
    T_ID (263) 5 8 9 35 45 49 50 51 52 53 54 80 83 89 96 97
    T_Print (264) 55
    T_Cln (265) 63 64 66 67 68 96
    T_NL (266) 10 12 13 60 71 72 73
    T_EQL (267) 49 50 51 52 53 54
    T_NEQ (268)
    T_EQ (269) 38
    T_GT (270) 32
    T_LT (271) 30
    T_EGT (272) 34 40
    T_ELT (273) 33 39
    T_Or (274) 29
    T_And (275) 31
    T_Not (276) 43
    T_In (277) 35
    ID (278) 71
    ND (279) 72
    DD (280) 75 77
    T_String (281) 4 93
    T_If (282) 63 64
    T_Elif (283) 66
    T_While (284) 68
    T_Else (285) 67
    T_Import (286) 45
    T_Break (287) 47
    T_Pass (288) 46
    T_MN (289) 24 27
    T_PL (290) 23
    T_DV (291) 26
    T_ML (292) 25
    T_OP (293) 28 44 55 96 97
    T_CP (294) 28 44 55 96 97
    T_OB (295) 8 9 52 53 54
    T_CB (296) 8 9 52 53 54
    T_Def (297) 96
    T_Comma (298) 83 86
    T_List (299)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    StartDebugger <node> (46)
        on left: 2
        on right: 0
    $@1 (47)
        on left: 1
        on right: 2
    constant <node> (48)
        on left: 3 4
        on right: 6 8
    term <node> (49)
        on left: 5 6 7
        on right: 9 22 54 55 86
    list_index <node> (50)
        on left: 8 9
        on right: 7
    StartParse <node> (51)
        on left: 10 12 13
        on right: 2 10 12
    $@2 (52)
        on left: 11
        on right: 12
    basic_stmt <node> (53)
        on left: 14 15 16 17 18 19 20 21
        on right: 56 69
    arith_exp <node> (54)
        on left: 22 23 24 25 26 27 28
        on right: 18 23 24 25 26 27 28 30 32 33 34 35 38 39 40 49
    bool_exp <node> (55)
        on left: 29 30 31 32 33 34 35 36
        on right: 19 44 50 63 64 66 68
    bool_term <node> (56)
        on left: 37 38 39 40 41 42
        on right: 29 31 36
    bool_factor <node> (57)
        on left: 43 44
        on right: 37 43
    import_stmt <node> (58)
        on left: 45
        on right: 16
    pass_stmt <node> (59)
        on left: 46
        on right: 14
    break_stmt <node> (60)
        on left: 47
        on right: 15
    return_stmt <node> (61)
        on left: 48
        on right: 21
    assign_stmt <node> (62)
        on left: 49 50 51 52 53 54
        on right: 17
    print_stmt <node> (63)
        on left: 55
        on right: 20
    finalStatements <node> (64)
        on left: 56 57 58 59 60
        on right: 12 13 71 72 75
    cmpd_stmt <node> (65)
        on left: 61 62
        on right: 57
    if_stmt <node> (66)
        on left: 63 64
        on right: 61
    elif_stmts <node> (67)
        on left: 65 66
        on right: 64 66
    else_stmt <node> (68)
        on left: 67
        on right: 65
    while_stmt <node> (69)
        on left: 68
        on right: 62
    start_suite <node> (70)
        on left: 69 71
        on right: 63 64 66 67 68 96
    $@3 (71)
        on left: 70
        on right: 71
    suite <node> (72)
        on left: 72 73
        on right: 71 72
    end_suite <node> (73)
        on left: 75 77 78
        on right: 73
    $@4 (74)
        on left: 74
        on right: 75
    $@5 (75)
        on left: 76
        on right: 77
    args <node> (76)
        on left: 80 81
        on right: 96
    $@6 (77)
        on left: 79
        on right: 80
    args_list (78)
        on left: 83 84
        on right: 80 83
    $@7 (79)
        on left: 82
        on right: 83
    call_list (80)
        on left: 86 87
        on right: 86 89 91 93
    $@8 (81)
        on left: 85
        on right: 86
    call_args <node> (82)
        on left: 89 91 93 94
        on right: 52 97
    $@9 (83)
        on left: 88
        on right: 89
    $@10 (84)
        on left: 90
        on right: 91
    $@11 (85)
        on left: 92
        on right: 93
    func_def <node> (86)
        on left: 96
        on right: 58
    $@12 (87)
        on left: 95
        on right: 96
    func_call <node> (88)
        on left: 97
        on right: 51 59


State 0

    0 $accept: • StartDebugger $end

    $default  reduce using rule 1 ($@1)

    StartDebugger  go to state 1
    $@1            go to state 2


State 1

    0 $accept: StartDebugger • $end

    $end  shift, and go to state 3


State 2

    2 StartDebugger: $@1 • StartParse T_EndOfFile

    error     shift, and go to state 4
    T_Return  shift, and go to state 5
    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 9
    T_Print   shift, and go to state 10
    T_NL      shift, and go to state 11
    T_Not     shift, and go to state 12
    T_String  shift, and go to state 13
    T_If      shift, and go to state 14
    T_While   shift, and go to state 15
    T_Import  shift, and go to state 16
    T_Break   shift, and go to state 17
    T_Pass    shift, and go to state 18
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 20
    T_Def     shift, and go to state 21

    constant         go to state 22
    term             go to state 23
    list_index       go to state 24
    StartParse       go to state 25
    basic_stmt       go to state 26
    arith_exp        go to state 27
    bool_exp         go to state 28
    bool_term        go to state 29
    bool_factor      go to state 30
    import_stmt      go to state 31
    pass_stmt        go to state 32
    break_stmt       go to state 33
    return_stmt      go to state 34
    assign_stmt      go to state 35
    print_stmt       go to state 36
    finalStatements  go to state 37
    cmpd_stmt        go to state 38
    if_stmt          go to state 39
    while_stmt       go to state 40
    func_def         go to state 41
    func_call        go to state 42


State 3

    0 $accept: StartDebugger $end •

    $default  accept


State 4

   60 finalStatements: error • T_NL

    T_NL  shift, and go to state 43


State 5

   48 return_stmt: T_Return •

    $default  reduce using rule 48 (return_stmt)


State 6

    3 constant: T_Number •

    $default  reduce using rule 3 (constant)


State 7

   41 bool_term: T_True •

    $default  reduce using rule 41 (bool_term)


State 8

   42 bool_term: T_False •

    $default  reduce using rule 42 (bool_term)


State 9

    5 term: T_ID •
    8 list_index: T_ID • T_OB constant T_CB
    9           | T_ID • T_OB term T_CB
   49 assign_stmt: T_ID • T_EQL arith_exp
   50            | T_ID • T_EQL bool_exp
   51            | T_ID • T_EQL func_call
   52            | T_ID • T_EQL T_OB call_args T_CB
   53            | T_ID • T_EQL T_OB T_CB
   54            | T_ID • T_OB term T_CB T_EQL term
   97 func_call: T_ID • T_OP call_args T_CP

    T_EQL  shift, and go to state 44
    T_OP   shift, and go to state 45
    T_OB   shift, and go to state 46

    $default  reduce using rule 5 (term)


State 10

   55 print_stmt: T_Print • T_OP term T_CP

    T_OP  shift, and go to state 47


State 11

   10 StartParse: T_NL • StartParse

    error     shift, and go to state 4
    T_Return  shift, and go to state 5
    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 9
    T_Print   shift, and go to state 10
    T_NL      shift, and go to state 11
    T_Not     shift, and go to state 12
    T_String  shift, and go to state 13
    T_If      shift, and go to state 14
    T_While   shift, and go to state 15
    T_Import  shift, and go to state 16
    T_Break   shift, and go to state 17
    T_Pass    shift, and go to state 18
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 20
    T_Def     shift, and go to state 21

    constant         go to state 22
    term             go to state 23
    list_index       go to state 24
    StartParse       go to state 48
    basic_stmt       go to state 26
    arith_exp        go to state 27
    bool_exp         go to state 28
    bool_term        go to state 29
    bool_factor      go to state 30
    import_stmt      go to state 31
    pass_stmt        go to state 32
    break_stmt       go to state 33
    return_stmt      go to state 34
    assign_stmt      go to state 35
    print_stmt       go to state 36
    finalStatements  go to state 37
    cmpd_stmt        go to state 38
    if_stmt          go to state 39
    while_stmt       go to state 40
    func_def         go to state 41
    func_call        go to state 42


State 12

   43 bool_factor: T_Not • bool_factor

    T_Not  shift, and go to state 12
    T_OP   shift, and go to state 49

    bool_factor  go to state 50


State 13

    4 constant: T_String •

    $default  reduce using rule 4 (constant)


State 14

   63 if_stmt: T_If • bool_exp T_Cln start_suite
   64        | T_If • bool_exp T_Cln start_suite elif_stmts

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 51
    T_Not     shift, and go to state 12
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 20

    constant     go to state 22
    term         go to state 23
    list_index   go to state 24
    arith_exp    go to state 52
    bool_exp     go to state 53
    bool_term    go to state 29
    bool_factor  go to state 30


State 15

   68 while_stmt: T_While • bool_exp T_Cln start_suite

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 51
    T_Not     shift, and go to state 12
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 20

    constant     go to state 22
    term         go to state 23
    list_index   go to state 24
    arith_exp    go to state 52
    bool_exp     go to state 54
    bool_term    go to state 29
    bool_factor  go to state 30


State 16

   45 import_stmt: T_Import • T_ID

    T_ID  shift, and go to state 55


State 17

   47 break_stmt: T_Break •

    $default  reduce using rule 47 (break_stmt)


State 18

   46 pass_stmt: T_Pass •

    $default  reduce using rule 46 (pass_stmt)


State 19

   27 arith_exp: T_MN • arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 57


State 20

   28 arith_exp: T_OP • arith_exp T_CP
   44 bool_factor: T_OP • bool_exp T_CP

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 51
    T_Not     shift, and go to state 12
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 20

    constant     go to state 22
    term         go to state 23
    list_index   go to state 24
    arith_exp    go to state 58
    bool_exp     go to state 59
    bool_term    go to state 29
    bool_factor  go to state 30


State 21

   96 func_def: T_Def • T_ID $@12 T_OP args T_CP T_Cln start_suite

    T_ID  shift, and go to state 60


State 22

    6 term: constant •

    $default  reduce using rule 6 (term)


State 23

   22 arith_exp: term •

    $default  reduce using rule 22 (arith_exp)


State 24

    7 term: list_index •

    $default  reduce using rule 7 (term)


State 25

    2 StartDebugger: $@1 StartParse • T_EndOfFile

    T_EndOfFile  shift, and go to state 61


State 26

   56 finalStatements: basic_stmt •

    $default  reduce using rule 56 (finalStatements)


State 27

   18 basic_stmt: arith_exp •
   23 arith_exp: arith_exp • T_PL arith_exp
   24          | arith_exp • T_MN arith_exp
   25          | arith_exp • T_ML arith_exp
   26          | arith_exp • T_DV arith_exp
   30 bool_exp: arith_exp • T_LT arith_exp
   32         | arith_exp • T_GT arith_exp
   33         | arith_exp • T_ELT arith_exp
   34         | arith_exp • T_EGT arith_exp
   35         | arith_exp • T_In T_ID
   38 bool_term: arith_exp • T_EQ arith_exp
   39          | arith_exp • T_ELT arith_exp
   40          | arith_exp • T_EGT arith_exp

    T_EQ   shift, and go to state 62
    T_GT   shift, and go to state 63
    T_LT   shift, and go to state 64
    T_EGT  shift, and go to state 65
    T_ELT  shift, and go to state 66
    T_In   shift, and go to state 67
    T_MN   shift, and go to state 68
    T_PL   shift, and go to state 69
    T_DV   shift, and go to state 70
    T_ML   shift, and go to state 71

    $default  reduce using rule 18 (basic_stmt)


State 28

   19 basic_stmt: bool_exp •

    $default  reduce using rule 19 (basic_stmt)


State 29

   29 bool_exp: bool_term • T_Or bool_term
   31         | bool_term • T_And bool_term
   36         | bool_term •

    T_Or   shift, and go to state 72
    T_And  shift, and go to state 73

    $default  reduce using rule 36 (bool_exp)


State 30

   37 bool_term: bool_factor •

    $default  reduce using rule 37 (bool_term)


State 31

   16 basic_stmt: import_stmt •

    $default  reduce using rule 16 (basic_stmt)


State 32

   14 basic_stmt: pass_stmt •

    $default  reduce using rule 14 (basic_stmt)


State 33

   15 basic_stmt: break_stmt •

    $default  reduce using rule 15 (basic_stmt)


State 34

   21 basic_stmt: return_stmt •

    $default  reduce using rule 21 (basic_stmt)


State 35

   17 basic_stmt: assign_stmt •

    $default  reduce using rule 17 (basic_stmt)


State 36

   20 basic_stmt: print_stmt •

    $default  reduce using rule 20 (basic_stmt)


State 37

   12 StartParse: finalStatements • T_NL $@2 StartParse
   13           | finalStatements • T_NL

    T_NL  shift, and go to state 74


State 38

   57 finalStatements: cmpd_stmt •

    $default  reduce using rule 57 (finalStatements)


State 39

   61 cmpd_stmt: if_stmt •

    $default  reduce using rule 61 (cmpd_stmt)


State 40

   62 cmpd_stmt: while_stmt •

    $default  reduce using rule 62 (cmpd_stmt)


State 41

   58 finalStatements: func_def •

    $default  reduce using rule 58 (finalStatements)


State 42

   59 finalStatements: func_call •

    $default  reduce using rule 59 (finalStatements)


State 43

   60 finalStatements: error T_NL •

    $default  reduce using rule 60 (finalStatements)


State 44

   49 assign_stmt: T_ID T_EQL • arith_exp
   50            | T_ID T_EQL • bool_exp
   51            | T_ID T_EQL • func_call
   52            | T_ID T_EQL • T_OB call_args T_CB
   53            | T_ID T_EQL • T_OB T_CB

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 75
    T_Not     shift, and go to state 12
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 20
    T_OB      shift, and go to state 76

    constant     go to state 22
    term         go to state 23
    list_index   go to state 24
    arith_exp    go to state 77
    bool_exp     go to state 78
    bool_term    go to state 29
    bool_factor  go to state 30
    func_call    go to state 79


State 45

   97 func_call: T_ID T_OP • call_args T_CP

    T_Number  shift, and go to state 80
    T_ID      shift, and go to state 81
    T_String  shift, and go to state 82

    $default  reduce using rule 94 (call_args)

    call_args  go to state 83


State 46

    8 list_index: T_ID T_OB • constant T_CB
    9           | T_ID T_OB • term T_CB
   54 assign_stmt: T_ID T_OB • term T_CB T_EQL term

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13

    constant    go to state 84
    term        go to state 85
    list_index  go to state 24


State 47

   55 print_stmt: T_Print T_OP • term T_CP

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13

    constant    go to state 22
    term        go to state 86
    list_index  go to state 24


State 48

   10 StartParse: T_NL StartParse •

    $default  reduce using rule 10 (StartParse)


State 49

   44 bool_factor: T_OP • bool_exp T_CP

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 51
    T_Not     shift, and go to state 12
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 20

    constant     go to state 22
    term         go to state 23
    list_index   go to state 24
    arith_exp    go to state 52
    bool_exp     go to state 59
    bool_term    go to state 29
    bool_factor  go to state 30


State 50

   43 bool_factor: T_Not bool_factor •

    $default  reduce using rule 43 (bool_factor)


State 51

    5 term: T_ID •
    8 list_index: T_ID • T_OB constant T_CB
    9           | T_ID • T_OB term T_CB

    T_OB  shift, and go to state 87

    $default  reduce using rule 5 (term)


State 52

   23 arith_exp: arith_exp • T_PL arith_exp
   24          | arith_exp • T_MN arith_exp
   25          | arith_exp • T_ML arith_exp
   26          | arith_exp • T_DV arith_exp
   30 bool_exp: arith_exp • T_LT arith_exp
   32         | arith_exp • T_GT arith_exp
   33         | arith_exp • T_ELT arith_exp
   34         | arith_exp • T_EGT arith_exp
   35         | arith_exp • T_In T_ID
   38 bool_term: arith_exp • T_EQ arith_exp
   39          | arith_exp • T_ELT arith_exp
   40          | arith_exp • T_EGT arith_exp

    T_EQ   shift, and go to state 62
    T_GT   shift, and go to state 63
    T_LT   shift, and go to state 64
    T_EGT  shift, and go to state 65
    T_ELT  shift, and go to state 66
    T_In   shift, and go to state 67
    T_MN   shift, and go to state 68
    T_PL   shift, and go to state 69
    T_DV   shift, and go to state 70
    T_ML   shift, and go to state 71


State 53

   63 if_stmt: T_If bool_exp • T_Cln start_suite
   64        | T_If bool_exp • T_Cln start_suite elif_stmts

    T_Cln  shift, and go to state 88


State 54

   68 while_stmt: T_While bool_exp • T_Cln start_suite

    T_Cln  shift, and go to state 89


State 55

   45 import_stmt: T_Import T_ID •

    $default  reduce using rule 45 (import_stmt)


State 56

   28 arith_exp: T_OP • arith_exp T_CP

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 90


State 57

   23 arith_exp: arith_exp • T_PL arith_exp
   24          | arith_exp • T_MN arith_exp
   25          | arith_exp • T_ML arith_exp
   26          | arith_exp • T_DV arith_exp
   27          | T_MN arith_exp •

    T_DV  shift, and go to state 70
    T_ML  shift, and go to state 71

    $default  reduce using rule 27 (arith_exp)


State 58

   23 arith_exp: arith_exp • T_PL arith_exp
   24          | arith_exp • T_MN arith_exp
   25          | arith_exp • T_ML arith_exp
   26          | arith_exp • T_DV arith_exp
   28          | T_OP arith_exp • T_CP
   30 bool_exp: arith_exp • T_LT arith_exp
   32         | arith_exp • T_GT arith_exp
   33         | arith_exp • T_ELT arith_exp
   34         | arith_exp • T_EGT arith_exp
   35         | arith_exp • T_In T_ID
   38 bool_term: arith_exp • T_EQ arith_exp
   39          | arith_exp • T_ELT arith_exp
   40          | arith_exp • T_EGT arith_exp

    T_EQ   shift, and go to state 62
    T_GT   shift, and go to state 63
    T_LT   shift, and go to state 64
    T_EGT  shift, and go to state 65
    T_ELT  shift, and go to state 66
    T_In   shift, and go to state 67
    T_MN   shift, and go to state 68
    T_PL   shift, and go to state 69
    T_DV   shift, and go to state 70
    T_ML   shift, and go to state 71
    T_CP   shift, and go to state 91


State 59

   44 bool_factor: T_OP bool_exp • T_CP

    T_CP  shift, and go to state 92


State 60

   96 func_def: T_Def T_ID • $@12 T_OP args T_CP T_Cln start_suite

    $default  reduce using rule 95 ($@12)

    $@12  go to state 93


State 61

    2 StartDebugger: $@1 StartParse T_EndOfFile •

    $default  reduce using rule 2 (StartDebugger)


State 62

   38 bool_term: arith_exp T_EQ • arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 94


State 63

   32 bool_exp: arith_exp T_GT • arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 95


State 64

   30 bool_exp: arith_exp T_LT • arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 96


State 65

   34 bool_exp: arith_exp T_EGT • arith_exp
   40 bool_term: arith_exp T_EGT • arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 97


State 66

   33 bool_exp: arith_exp T_ELT • arith_exp
   39 bool_term: arith_exp T_ELT • arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 98


State 67

   35 bool_exp: arith_exp T_In • T_ID

    T_ID  shift, and go to state 99


State 68

   24 arith_exp: arith_exp T_MN • arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 100


State 69

   23 arith_exp: arith_exp T_PL • arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 101


State 70

   26 arith_exp: arith_exp T_DV • arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 102


State 71

   25 arith_exp: arith_exp T_ML • arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 56

    constant    go to state 22
    term        go to state 23
    list_index  go to state 24
    arith_exp   go to state 103


State 72

   29 bool_exp: bool_term T_Or • bool_term

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 51
    T_Not     shift, and go to state 12
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 20

    constant     go to state 22
    term         go to state 23
    list_index   go to state 24
    arith_exp    go to state 104
    bool_term    go to state 105
    bool_factor  go to state 30


State 73

   31 bool_exp: bool_term T_And • bool_term

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 51
    T_Not     shift, and go to state 12
    T_String  shift, and go to state 13
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 20

    constant     go to state 22
    term         go to state 23
    list_index   go to state 24
    arith_exp    go to state 104
    bool_term    go to state 106
    bool_factor  go to state 30


State 74

   12 StartParse: finalStatements T_NL • $@2 StartParse
   13           | finalStatements T_NL •

    T_EndOfFile  reduce using rule 13 (StartParse)
    $default     reduce using rule 11 ($@2)

    $@2  go to state 107


State 75

    5 term: T_ID •
    8 list_index: T_ID • T_OB constant T_CB
    9           | T_ID • T_OB term T_CB
   97 func_call: T_ID • T_OP call_args T_CP

    T_OP  shift, and go to state 45
    T_OB  shift, and go to state 87

    $default  reduce using rule 5 (term)


State 76

   52 assign_stmt: T_ID T_EQL T_OB • call_args T_CB
   53            | T_ID T_EQL T_OB • T_CB

    T_Number  shift, and go to state 80
    T_ID      shift, and go to state 81
    T_String  shift, and go to state 82
    T_CB      shift, and go to state 108

    T_CB  [reduce using rule 94 (call_args)]

    call_args  go to state 109


State 77

   23 arith_exp: arith_exp • T_PL arith_exp
   24          | arith_exp • T_MN arith_exp
   25          | arith_exp • T_ML arith_exp
   26          | arith_exp • T_DV arith_exp
   30 bool_exp: arith_exp • T_LT arith_exp
   32         | arith_exp • T_GT arith_exp
   33         | arith_exp • T_ELT arith_exp
   34         | arith_exp • T_EGT arith_exp
   35         | arith_exp • T_In T_ID
   38 bool_term: arith_exp • T_EQ arith_exp
   39          | arith_exp • T_ELT arith_exp
   40          | arith_exp • T_EGT arith_exp
   49 assign_stmt: T_ID T_EQL arith_exp •

    T_EQ   shift, and go to state 62
    T_GT   shift, and go to state 63
    T_LT   shift, and go to state 64
    T_EGT  shift, and go to state 65
    T_ELT  shift, and go to state 66
    T_In   shift, and go to state 67
    T_MN   shift, and go to state 68
    T_PL   shift, and go to state 69
    T_DV   shift, and go to state 70
    T_ML   shift, and go to state 71

    $default  reduce using rule 49 (assign_stmt)


State 78

   50 assign_stmt: T_ID T_EQL bool_exp •

    $default  reduce using rule 50 (assign_stmt)


State 79

   51 assign_stmt: T_ID T_EQL func_call •

    $default  reduce using rule 51 (assign_stmt)


State 80

   91 call_args: T_Number • $@10 call_list

    $default  reduce using rule 90 ($@10)

    $@10  go to state 110


State 81

   89 call_args: T_ID • $@9 call_list

    $default  reduce using rule 88 ($@9)

    $@9  go to state 111


State 82

   93 call_args: T_String • $@11 call_list

    $default  reduce using rule 92 ($@11)

    $@11  go to state 112


State 83

   97 func_call: T_ID T_OP call_args • T_CP

    T_CP  shift, and go to state 113


State 84

    6 term: constant •
    8 list_index: T_ID T_OB constant • T_CB

    T_CB  shift, and go to state 114

    T_CB  [reduce using rule 6 (term)]


State 85

    9 list_index: T_ID T_OB term • T_CB
   54 assign_stmt: T_ID T_OB term • T_CB T_EQL term

    T_CB  shift, and go to state 115


State 86

   55 print_stmt: T_Print T_OP term • T_CP

    T_CP  shift, and go to state 116


State 87

    8 list_index: T_ID T_OB • constant T_CB
    9           | T_ID T_OB • term T_CB

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 51
    T_String  shift, and go to state 13

    constant    go to state 84
    term        go to state 117
    list_index  go to state 24


State 88

   63 if_stmt: T_If bool_exp T_Cln • start_suite
   64        | T_If bool_exp T_Cln • start_suite elif_stmts

    T_Return  shift, and go to state 5
    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 118
    T_Print   shift, and go to state 10
    T_NL      shift, and go to state 119
    T_Not     shift, and go to state 12
    T_String  shift, and go to state 13
    T_Import  shift, and go to state 16
    T_Break   shift, and go to state 17
    T_Pass    shift, and go to state 18
    T_MN      shift, and go to state 19
    T_OP      shift, and go to state 20

    constant     go to state 22
    term         go to state 23
    list_index   go to state 24
    basic_stmt   go to state 120
    arith_exp    go to state 27
    bool_exp     go to state 28
    bool_term    go to state 29
    bool_factor  go to state 30
    import_stmt  go to state 31
    pass_stmt    go to state 32
    break_stmt   go to state 33
    return_stmt  go to state 34
    assign_stmt  go to state 35
    print_stmt   go to state 36
    start_suite  go to state 121


State 89

   68 while_stmt: T_While bool_exp T_Cln • start_suite
